; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_zset.c_zcardCommand.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_zset.c_zcardCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32** }

@shared = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@OBJ_ZSET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zcardCommand(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = load i32**, i32*** %6, align 8
  %8 = getelementptr inbounds i32*, i32** %7, i64 1
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %3, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @shared, i32 0, i32 0), align 4
  %13 = call i32* @lookupKeyReadOrReply(%struct.TYPE_7__* %10, i32* %11, i32 %12)
  store i32* %13, i32** %4, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %21, label %15

15:                                               ; preds = %1
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @OBJ_ZSET, align 4
  %19 = call i64 @checkType(%struct.TYPE_7__* %16, i32* %17, i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %15, %1
  br label %27

22:                                               ; preds = %15
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @zsetLength(i32* %24)
  %26 = call i32 @addReplyLongLong(%struct.TYPE_7__* %23, i32 %25)
  br label %27

27:                                               ; preds = %22, %21
  ret void
}

declare dso_local i32* @lookupKeyReadOrReply(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i64 @checkType(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i32 @addReplyLongLong(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @zsetLength(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
